docs/tests/typing/bad/testfile-comparison-6.cpp

void foo() {}
int main() { 1 < foo(); }

